@@ -45,6 +45,8 @@ TBD
 - Added documentation for #46
 - Include PR #48 to enable support for failover proxies received from PAC
 - Fix issue #51 - support for Windows 8 and below
+- Fix issue #34 by using pywin32 for NTLM and winkerberos for Kerberos since the
+  latter doesn't work consistently for NTLM
 
 v0.3.0 - 2018-02-19
 - Fixed issue 9 - Added support for winkerberos to workaround pywin32 bug
